# WineGUI

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeCPack.cmake  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.sh  build_debug.sh  build_prod.sh  create_release_links.sh  deps.sh  doxygen.conf  packaging.cmake  release.sh  suppressions.txt  upload_docker_image.sh  winegui.code-workspace
.claude/skills/gui-debug/: SKILL.md
.github/: FUNDING.yml
apps/: README.md
cmake/: appimage.cmake  doxygen.cmake  g_settings.cmake  git_version.cmake  packaging.cmake
include/: about_dialog.h  add_app_window.h  app_list_model_column.h  app_list_struct.h  application.h  bottle_clone_window.h  bottle_config_file.h  bottle_configure_env_var_window.h  bottle_configure_window.h  bottle_edit_window.h  bottle_item.h  bottle_manager.h  bottle_new_assistant.h  bottle_settings_window.h  bottle_types.h  busy_dialog.h  config_file.h  create_shortcut_window.h  dialog_window.h  dll_override_types.h  edit_window.h  general_config_file.h  general_config_struct.h  generic_config_file.h  gui.h  helper.h  main_window.h  menu.h  new_bottle_assistant.h  overflow_toolbar.h  preferences_window.h  project_config.h.in  remove_app_window.h  settings_window.h  signal_controller.h  signal_dispatcher.h  window.h  wine_bottle.h  wine_defaults.h  wine_runner_install_task.h  (+3 more)
misc/: Dockerfile  build_and_upload_image.sh  errorlist.xml  org.melroy.winegui.metainfo.xml  package_desc.txt  winegui.desktop
scripts/: build-appimage.sh  build-debug.sh  build-prod.sh  build.sh  build_and_upload_image.sh  build_docs.sh  build_prod.sh  check-format.sh  check_format.sh  cpp-check.sh  cpp_check.sh  create-latest-release-file.sh  create-release-links.sh  create-source-archive.sh  create_latest_release_file.sh  create_release_links.sh  create_source_archive.sh  deps.sh  fix-format.sh  fix_format.sh  generate-gif.sh  generate_gif.sh  run-tests.sh  upload_release.sh  valgrind-plot.sh  valgrind.sh
src/: about_dialog.cc  add_app_window.cc  application.cc  bottle_clone_window.cc  bottle_config_file.cc  bottle_configure_env_var_window.cc  bottle_configure_window.cc  bottle_edit_window.cc  bottle_item.cc  bottle_manager.cc  bottle_new_assistant.cc  bottle_settings_window.cc  busy_dialog.cc  config_file.cc  create_shortcut_window.cc  dialog_window.cc  edit_window.cc  general_config_file.cc  generic_config_file.cc  gui.cc  helper.cc  main.cc  main_window.cc  menu.cc  new_bottle_assistant.cc  overflow_toolbar.cc  preferences_window.cc  project_config.h.in  remove_app_window.cc  settings_window.cc  signal_controller.cc  signal_dispatcher.cc  window.cc  wine_runner_install_task.cc  wine_runner_manager.cc  wine_runner_window.cc
src/schema/: org.melroy.winegui.gschema.xml
tst/: CMakeLists.txt  bottle_config_migration_test.cc  helper_test.cc  wine_runner_test.cc
